infrastructure/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dlux-sui
  labels:
    name: dlux-sui
